src/tests/routes/trustpub/github_configs/list/snapshots/integration__routes__trustpub__github_configs__list__by_user__pagination-4.snap
---
source: src/tests/routes/trustpub/github_configs/list/by_user.rs
expression: json
---
{
  "github_configs": [
    {
      "crate": "bbb",
      "created_at": "[datetime]",
      "environment": null,
      "id": 6,
      "repository_name": "bbb-repo-0",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    },
    {
      "crate": "bbb",
      "created_at": "[datetime]",
      "environment": null,
      "id": 7,
      "repository_name": "bbb-repo-1",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    },
    {
      "crate": "bbb",
      "created_at": "[datetime]",
      "environment": null,
      "id": 8,
      "repository_name": "bbb-repo-2",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    },
    {
      "crate": "bbb",
      "created_at": "[datetime]",
      "environment": null,
      "id": 9,
      "repository_name": "bbb-repo-3",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    },
    {
      "crate": "bbb",
      "created_at": "[datetime]",
      "environment": null,
      "id": 10,
      "repository_name": "bbb-repo-4",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    }
  ],
  "meta": {
    "next_page": "?user_id=1&per_page=5&seek=MTA",
    "total": 15
  }
}
